# emotify

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
firmware/: platformio.ini
firmware/src/: main.cpp
