[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
rspotify = { version = "0.12", features = ["client-reqwest", "env-file", "cli"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
notify-rust = "4.7"
env_logger = "0.11"
open = "5.0"